--- a/_config.yml
+++ b/_config.yml
@@ -69,5 +69,5 @@ theme: even_mod
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/jenkey2011/jenkey2011.github.io.git
+  repo: git@github.com:jenkey2011/jenkey2011.github.io.git
   branch: master
